--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ project(${TARGET_NAME} VERSION 0.0.1 DESCRIPTION "Project Description")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_PREFIX_PATH "C:\\Qt\\6.1.2\\mingw81_64")
-set(SOURCE_FILES main.cpp world/tile.cpp world/tile.h world/chunk.cpp world/chunk.h basics/coordinates.h world/terrain_type.h world/objects.cpp world/objects.h scenes/window.cpp)
+set(SOURCE_FILES main.cpp world/tile.cpp world/tile.h world/chunk.cpp world/chunk.h basics/coordinates.h world/terrain_type.h world/objects.cpp world/objects.h scenes/game_screen.h scenes/vulkan_renderer.h scenes/main_menu.cpp scenes/main_menu.h scenes/main_menu.ui)
 add_executable(project_two ${SOURCE_FILES})
 find_package(Qt${QT_MAJOR_VERSION} COMPONENTS Widgets REQUIRED PATHS $ENV{Qt${QT_MAJOR_VERSION}_HOME})
 target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -pedantic -Werror)
