--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+#header
 cmake_minimum_required(VERSION 3.8)
 set(TARGET_NAME project_two)
 set(QT_MAJOR_VERSION 6)
@@ -9,11 +10,23 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_PREFIX_PATH "C:\\Qt\\6.1.2\\mingw81_64")
-set(SOURCE_FILES main.cpp world/tile.cpp world/tile.h world/chunk.cpp world/chunk.h basics/coordinates.h world/terrain_type.h world/objects.cpp world/objects.h scenes/game_screen.h scenes/vulkan_renderer.h scenes/main_menu.cpp scenes/main_menu.h scenes/main_menu.ui)
+set(SOURCE_FILES main.cpp world/tile.cpp world/tile.h world/chunk.cpp world/chunk.h basics/coordinates.h world/terrain_type.h world/objects.cpp world/objects.h scenes/windows/main_menu.h scenes/windows/main_menu.cpp)
 add_executable(project_two ${SOURCE_FILES})
-find_package(Qt${QT_MAJOR_VERSION} COMPONENTS Widgets REQUIRED PATHS $ENV{Qt${QT_MAJOR_VERSION}_HOME})
+
+#target init
 target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -pedantic -Werror)
 set_target_properties(${TARGET_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_NAME}d" RELEASE_OUTPUT_NAME ${TARGET_NAME})
+
+#find packages
+find_package(Qt${QT_MAJOR_VERSION} COMPONENTS Widgets REQUIRED PATHS $ENV{Qt${QT_MAJOR_VERSION}_HOME})
+find_package(Qt${QT_MAJOR_VERSION} COMPONENTS Gui REQUIRED PATHS $ENV{Qt${QT_MAJOR_VERSION}_HOME})
+
+#link libs
+target_link_libraries( Qt${QT_MAJOR_VERSION}::Gui)
+target_link_libraries(project_two PRIVATE Qt${QT_MAJOR_VERSION}::Widgets)
+
+#include dirs
 target_include_directories(${TARGET_NAME} PRIVATE ${Qt${QT_MAJOR_VERSION}_INCLUDE_DIRS})
 target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(project_two PRIVATE Qt6::Widgets)
+
+
