Update to world gen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.8)
 #set vars
 set(TARGET_NAME project_two)
 project(${TARGET_NAME} VERSION 0.0.1 DESCRIPTION "Project Description")
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(SOURCE_FILES main.cpp basics/constants.h modules/AppInit.cpp modules/AppInit.h modules/worldgen/tile.h modules/worldgen/terrain_type.h modules/worldgen/chunk.h modules/worldgen/object_type.h modules/worldgen/map.cpp modules/worldgen/map.h)
@@ -15,4 +15,5 @@ find_package(raylib 3.0 REQUIRED)
 target_link_libraries(${PROJECT_NAME} raylib)
 #target init
 set_target_properties(${TARGET_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_NAME}d" RELEASE_OUTPUT_NAME ${TARGET_NAME})
+target_compile_options(${TARGET_NAME} PUBLIC -Wall -Wextra -pedantic -Werror)
 
