Reformat CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,20 @@ project(${TARGET_NAME} VERSION 0.0.1 DESCRIPTION "Project Description")
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(HEADER_FILES modules/AppInit.h modules/worldgen/tile.h modules/worldgen/terrain_type.h modules/worldgen/chunk.h modules/worldgen/object_type.h modules/worldgen/map.h modules/content/content_manager.h)
-set(SOURCE_FILES main.cpp modules/AppInit.cpp modules/worldgen/tile.cpp modules/worldgen/map.cpp modules/worldgen/chunk.cpp modules/worldgen/border_chunk.h)
+set(HEADER_FILES
+        modules/AppInit.h
+        modules/worldgen/tile.h
+        modules/worldgen/map.h
+        modules/worldgen/chunk.h
+        modules/content/content_manager.h
+        )
+set(SOURCE_FILES
+        main.cpp
+        modules/AppInit.cpp
+        modules/worldgen/tile.cpp
+        modules/worldgen/map.cpp
+        modules/worldgen/chunk.cpp
+        )
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -lsqlite3")
 #add exec
 add_executable(project_two ${HEADER_FILES} ${SOURCE_FILES})
